# sanic-ext

./: CONTRIBUTING.md  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
examples/basic/: server.py
examples/basic/app/: data.py  models.py
examples/cars/: main.py
examples/cars/blueprints/: car.py
sanic_ext/: __init__.py  bootstrap.py  config.py  exceptions.py
sanic_ext/extensions/: base.py
sanic_ext/extensions/convenience/: extension.py
sanic_ext/extensions/health/: endpoint.py  extension.py  monitor.py
sanic_ext/extensions/http/: cors.py  extension.py  methods.py
sanic_ext/extensions/injection/: command_wrapper.py  constructor.py  extension.py  injector.py  registry.py
sanic_ext/extensions/livereload/: app.py  extension.py  setup.py
sanic_ext/extensions/logging/: extension.py  extractor.py  logger.py
sanic_ext/extensions/oas/: __init__.py  base.py  builder.py  decorators.py  definition.py  expose.py  extension.py  registry.py  schema.py  signature.py  startup.py
sanic_ext/extensions/openapi/: __init__.py  autodoc.py  blueprint.py  builders.py  constants.py  definitions.py  extension.py  openapi.py  types.py  utils.py  validation.py
sanic_ext/extras/: request.py
sanic_ext/utils/: cdn.py  extraction.py  route.py  string.py  typing.py  version.py
test_reports/: report.html
tests/: conftest.py
tests/ext/http/: test_methods.py
tests/extensions/: test_startup.py
tests/extra/: __models__.py  test_parse_hint.py  test_request_counted.py  test_serializer.py  test_validation.py  test_validation_attrs.py  test_validation_dataclass.py  test_validation_msgspec.py  test_validation_multiple.py  test_validation_pydantic.py
tests/fake/: server.py
tests/old/: _api.py  _fields.py  conftest.py
(+58 files in other folders)
