[tool:pytest]
;  addopts=--durations=0 --html=test_reports/report.html --self-contained-html --cov=sanic_openapi --cov-config .coveragerc --cov-report html

[aliases]
test=pytest

[metadata]
name = sanic-ext
version = 21.12.3
url = http://github.com/sanic-org/sanic-ext/
license = MIT
author = Sanic Community
description = Extend your Sanic installation with some core functionality.
long_description = file: README.rst
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = find:
install_requires =
    pyyaml>=3.0.0

[options.package_data]
sanic_ext = extensions/openapi/ui/*
