[metadata]
name = sanic-ext
version = 22.1.0
url = http://github.com/sanic-org/sanic-ext/
license = MIT
author = Sanic Community
description = Extend your Sanic installation with some core functionality.
long_description = file: README.rst
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = find:
install_requires =
    pyyaml>=3.0.0

[options.package_data]
sanic_ext = extensions/openapi/ui/*

[options.extras_require]
test =
    sanic_testing>=0.8
    coverage
    pytest
    pytest-cov
    pytest-asyncio
    tox
dev =
    %(test)s
    black>=21.4b2
    flake8>=3.7.7
    isort>=5.0.0
